--- a/MLP_NumberRecognition.ipynb
+++ b/MLP_NumberRecognition.ipynb
@@ -1,32 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 手寫數字辨識\n",
-    "\n",
-    "* 使用演算法: CNN"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "partial-edward",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from PIL import Image\n",
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense,Dropout,Convolution2D,MaxPooling2D,Flatten\n",
-    "from tensorflow.keras.optimizers import Adam"
+    "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "monetary-lobby",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,195 +23,130 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "checked-terrorist",
    "metadata": {},
    "outputs": [],
    "source": [
-    "(X_train, Y_train), (x_test, y_test) = mnist.load_data()"
+    "(X_train, y_train), (X_test, y_test) = mnist.load_data()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "agreed-korean",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = X_train.reshape(-1, 28, 28, 1) / 255.0\n",
-    "x_test = x_test.reshape(-1, 28, 28, 1) / 255.0"
+    "X_train, X_test = X_train / 255.0, X_test / 255.0 #將每個 pixel 的值從 Int 轉成 floating point 同時做normalize"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Y_train = tf.keras.utils.to_categorical(Y_train, num_classes=10)\n",
-    "y_test = tf.keras.utils.to_categorical(y_test, num_classes=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#開始建立model\n",
-    "model = Sequential()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#新增建立一個卷積核處理二維資料\n",
-    "model.add(Convolution2D(\n",
-    "                         input_shape=(28, 28, 1), #資料維度\n",
-    "                         filters=32, #輸出資料維度\n",
-    "                         kernel_size=5, #卷積核大小\n",
-    "                         strides=1, #進行卷積核計算時移動步幅大小\n",
-    "                         padding='same', #設定圖形邊界資料處理策略為補零\n",
-    "                         activation='relu'#設定啟動函數為relu,當輸入值>0則輸出線性函數,否則輸出0, f(x)=max(0,x),避免sigmod梯度消失問題\n",
-    "                        ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#對卷積核層輸出的空間資料進行最大值池化策略\n",
-    "model.add(MaxPooling2D(\n",
-    "                        pool_size=2, #設定池化視窗的維度\n",
-    "                        strides=2, #設定在做池化石的步幅\n",
-    "                        padding='same',\n",
-    "                      ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(Convolution2D(64, 5, strides=1, padding='same', activation='relu'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(MaxPooling2D(2, 2, 'same'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(Flatten()) #將輸入資料壓平成一維"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(Dense(1024, activation='relu'))#進行全連接標準神經網路"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(Dropout(0.5)) #將神經完按照50%機率隨機失效,避免過擬合情況發生,也加速訓練速度"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.add(Dense(10, activation='softmax'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adam = Adam(lr=1e-4) #設定學習率"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.compile(optimizer=adam, loss='categorical_crossentropy', metrics=['accuracy']) #編譯神經網路模型"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "id": "angry-crack",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 60000 samples, validate on 10000 samples\n",
-      "Epoch 1/10\n",
-      "60000/60000 [==============================] - 71s 1ms/sample - loss: 0.3310 - accuracy: 0.9075 - val_loss: 0.0907 - val_accuracy: 0.9733\n",
-      "Epoch 2/10\n",
-      "60000/60000 [==============================] - 72s 1ms/sample - loss: 0.0931 - accuracy: 0.9730 - val_loss: 0.0570 - val_accuracy: 0.9816\n",
-      "Epoch 3/10\n",
-      "60000/60000 [==============================] - 75s 1ms/sample - loss: 0.0672 - accuracy: 0.9794 - val_loss: 0.0377 - val_accuracy: 0.9874\n",
-      "Epoch 4/10\n",
-      "60000/60000 [==============================] - 77s 1ms/sample - loss: 0.0524 - accuracy: 0.9841 - val_loss: 0.0341 - val_accuracy: 0.9884\n",
-      "Epoch 5/10\n",
-      "60000/60000 [==============================] - 71s 1ms/sample - loss: 0.0427 - accuracy: 0.9869 - val_loss: 0.0324 - val_accuracy: 0.9888\n",
-      "Epoch 6/10\n",
-      "60000/60000 [==============================] - 72s 1ms/sample - loss: 0.0361 - accuracy: 0.9888 - val_loss: 0.0262 - val_accuracy: 0.9906\n",
-      "Epoch 7/10\n",
-      "60000/60000 [==============================] - 73s 1ms/sample - loss: 0.0313 - accuracy: 0.9902 - val_loss: 0.0257 - val_accuracy: 0.9906\n",
-      "Epoch 8/10\n",
-      "60000/60000 [==============================] - 72s 1ms/sample - loss: 0.0286 - accuracy: 0.9917 - val_loss: 0.0248 - val_accuracy: 0.9910\n",
-      "Epoch 9/10\n",
-      "60000/60000 [==============================] - 72s 1ms/sample - loss: 0.0240 - accuracy: 0.9927 - val_loss: 0.0236 - val_accuracy: 0.9910\n",
-      "Epoch 10/10\n",
-      "60000/60000 [==============================] - 73s 1ms/sample - loss: 0.0217 - accuracy: 0.9931 - val_loss: 0.0221 - val_accuracy: 0.9926\n"
+      "60000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(X_train)) #training data 總共有60000張圖片"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "external-enough",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(28, 28)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train[0].shape) #每張圖片（拿第一張當樣本）大小為 28x28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dietary-technology",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 開始建model\n",
+    "# 利用 \"Sequential\" 把每層 layer 疊起來\n",
+    "\n",
+    "# input 大小為 28 x 28\n",
+    "\n",
+    "# 最後的 Dense(10) 且 activation 用 softmax\n",
+    "# 代表最後 output 為 10 個 class （0~9）的機率\n",
+    "model = tf.keras.models.Sequential([\n",
+    "  tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
+    "  tf.keras.layers.Dense(128, activation='relu'),\n",
+    "  tf.keras.layers.Dropout(0.2),\n",
+    "  tf.keras.layers.Dense(10, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "# model每層定義好後需要經過compile\n",
+    "model.compile(optimizer='adam',loss='sparse_categorical_crossentropy',metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "applicable-fisher",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 60000 samples\n",
+      "Epoch 1/5\n",
+      "60000/60000 [==============================] - 5s 80us/sample - loss: 0.2943 - accuracy: 0.9154\n",
+      "Epoch 2/5\n",
+      "60000/60000 [==============================] - 4s 72us/sample - loss: 0.1415 - accuracy: 0.9579\n",
+      "Epoch 3/5\n",
+      "60000/60000 [==============================] - 4s 74us/sample - loss: 0.1057 - accuracy: 0.9679\n",
+      "Epoch 4/5\n",
+      "60000/60000 [==============================] - 4s 71us/sample - loss: 0.0875 - accuracy: 0.9727\n",
+      "Epoch 5/5\n",
+      "60000/60000 [==============================] - 5s 77us/sample - loss: 0.0756 - accuracy: 0.9764\n",
+      "10000/10000 - 1s - loss: 0.0758 - accuracy: 0.9757\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x2b8ba139348>"
+       "[0.07576700633405707, 0.9757]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train, Y_train, batch_size=64, epochs=10, validation_data=(x_test, y_test))"
+    "# 將搭好的 model 去 fit 我們的 training data\n",
+    "# 並evalutate 在 testing data 上\n",
+    "model.fit(X_train, y_train, epochs=5)\n",
+    "model.evaluate(X_test, y_test, verbose=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
+   "id": "incorporated-sugar",
    "metadata": {},
    "outputs": [
     {
@@ -234,37 +156,41 @@
       "WARNING:tensorflow:From C:\\Users\\NickLin\\AppData\\Roaming\\Python\\Python37\\site-packages\\tensorflow_core\\python\\ops\\resource_variable_ops.py:1786: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "If using Keras pass *_constraint arguments to layers.\n",
-      "INFO:tensorflow:Assets written to: mnist.CNNmodel\\assets\n"
+      "INFO:tensorflow:Assets written to: mnist.MLPmodel\\assets\n"
      ]
     }
    ],
    "source": [
     "#將訓練出的model儲存\n",
-    "model.save('mnist.CNNmodel')"
+    "model.save('mnist.MLPmodel')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
+   "id": "spanish-satellite",
    "metadata": {},
    "outputs": [],
    "source": [
     "#開始進行手寫數字預測\n",
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
     "img = Image.open('data\\\\img\\\\number2.jpg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
+   "id": "medium-resident",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2b8ba376148>"
+       "<matplotlib.image.AxesImage at 0x23eb21db508>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -287,25 +213,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
+   "id": "facial-source",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "image = np.array(img.resize((28, 28)).convert('L'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
+   "id": "personal-capability",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2b8bbd73a88>"
+       "<matplotlib.image.AxesImage at 0x23eb2560988>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -328,7 +257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
+   "id": "round-handling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,16 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
+   "id": "worth-mumbai",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2b8bbd42ac8>"
+       "<matplotlib.image.AxesImage at 0x23eb25cd848>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -369,26 +300,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
+   "id": "moving-discussion",
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = image.reshape((1, 28, 28, 1))"
+    "image = image.reshape(1,28, 28)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
+   "id": "genuine-height",
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.keras.models import load_model\n",
-    "model = load_model('mnist.CNNmodel')"
+    "model = load_model('mnist.MLPmodel')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
+   "id": "vietnamese-captain",
    "metadata": {},
    "outputs": [
     {
@@ -407,13 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "id": "regulation-textbook",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -439,5 +367,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
